gke-cluster/manifests/db-statefulset-pvc-svc.yaml
apiVersion: v1
kind: StatefulSet
metadata:
  name: postgres-statefulset
spec:
  selector:
    matchLabels:
      app: postgres
      version: v1
  serviceName: postgres-statefulset   ##
  replicas: 3
  template:
    metadata:
      labels:
        app: postgres
        version: v1
    spec:
      containers:
      - name: db-postgres
        image: postgres
        ports:
        - containerPort: 5432
          name: http
        volumeMounts:
        - name: postgres-volume
          mountPath: "/var/lib/postgresql/data"
  volumeClaimTemplates:
  - metadata:
      name: postgres-pvc
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: postgresql
  type: ClusterIP
